[gd_scene load_steps=2 format=3 uid="uid://cuy4t2v7uji4a"]

[ext_resource type="Script" path="res://Scenes/Menus/PauseScreen.gd" id="1_qembu"]

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qembu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 540.0
offset_bottom = 960.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.705882)
layout_mode = 2
text = "Resume"

[node name="QuitToMenu" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0.705882)
layout_mode = 2
text = "Quit to menu"

[node name="QuitGame" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.705882)
layout_mode = 2
text = "Quit game"
